--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -57,7 +57,6 @@ jobs:
       - name: Install dependencies
         run: |
           rm -rf node_modules
-          yarn install --verbose
-          yarn why stack-utils
+          yarn install
       - name: Run tests
         run: npx jest
