--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -19,6 +19,7 @@ jobs:
       - run: |
           yarn install --no-immutable --no-immutable-cache
           yarn prepack
+      - run: corepack disable
       - uses: actions/setup-node@v4
         with:
           node-version: '6'
