--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -65,6 +65,7 @@ jobs:
           yarn install
       - name: Run tests
         run: |
+          pwd
           ls -al
           ls -al src
           ls -al src/compat/array
