--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -40,6 +40,7 @@ jobs:
               "@babel/core": "^7.28.0",
               "@babel/preset-env": "^7.28.0",
               "@babel/preset-typescript": "^7.27.1",
+              "babel-jest": "^23",
               "jest": "^23"
             },
             "scripts": {
