--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["@babel/preset-typescript"]
+  "presets": ["@babel/preset-typescript"],
+  "plugins": ["@babel/plugin-transform-modules-commonjs"]
 }
