--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -40,7 +40,7 @@ jobs:
               "@babel/core": "^7.28.0",
               "@babel/preset-env": "^7.28.0",
               "@babel/preset-typescript": "^7.27.1",
-              "@babel/plugin-transform-modules-commonjs": "^7.27.1"
+              "@babel/plugin-transform-modules-commonjs": "^7.27.1",
               "babel-jest": "^24",
               "jest": "^24"
             },
