--- a/.github/workflows/node-6.yml
+++ b/.github/workflows/node-6.yml
@@ -52,6 +52,11 @@ jobs:
             }
           }
           EOF
+          cat > .babelrc << 'EOF'
+          {
+            "presets": ["@babel/preset-typescript"]
+          }
+          EOF
           cat package.json
       - name: Check node, npm version
         run: |
