--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "@typescript-eslint/parser": "^8.26.1",
     "@vitest/coverage-istanbul": "^2.1.2",
     "@vue/compiler-sfc": "^3.5.10",
+    "babel-plugin-polyfill-corejs3": "^0.13.0",
     "broken-link-checker": "^0.7.8",
+    "core-js": "^3.44.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-no-for-of-array": "^0.0.1",
