--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "@types/tar": "^6.1.13",
     "@typescript-eslint/parser": "^8.26.1",
     "@vitest/coverage-istanbul": "^2.1.2",
+    "@vitest/eslint-plugin": "^1.3.4",
     "@vue/compiler-sfc": "^3.5.10",
     "broken-link-checker": "^0.7.8",
     "eslint": "^9.22.0",
